--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   rxdart: ^0.19.0
   font_awesome_flutter: ^8.8.1
   flare_flutter: ^2.0.3
+  firebase_auth: ^0.6.6
 
 dev_dependencies:
   flutter_test:
