--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  cloud_firestore: ^0.13.6
+  image_picker: ^0.6.7+1
+  google_sign_in: ^4.5.1
+  firebase_storage: ^3.1.6
+  firebase_auth: ^0.16.1
+  flutter_facebook_login: ^3.0.0
+  flutter_dialogflow: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +46,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  
+  assets:
+    - assets/credentials.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
