Inserção do bot oficial do projeto

--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -48,7 +48,7 @@ dev_dependencies:
 flutter:
   
   assets:
-    - assets/credentials.json
+    - assets/key.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
