--- a/ProjetoPSFlutter/ios/Flutter/Generated.xcconfig
+++ b/ProjetoPSFlutter/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Felipe\Desktop\flutter_apps\ProjetoPSFlutter\ProjetoPSFlutter\ProjetoPSFlutter
+FLUTTER_APPLICATION_PATH=C:\Users\fscic\Desktop\flutter_apps\ProjetoPSFlutter\ProjetoPSFlutter\ProjetoPSFlutter
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
