Página de Perfil adicionada

--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -48,7 +48,11 @@ dev_dependencies:
 flutter:
   
   assets:
+    - assets/images/
+    - assets/fonts/Montserrat-Light.ttf
+    - assets/fonts/Montserrat-LightItalic.ttf
     - assets/key.json
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
