--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_html_view: ^0.5.11
   flutter_spinkit: ^4.1.2
   charts_flutter: 0.9.0
+  clippy_flutter: ^1.1.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -61,12 +63,6 @@ flutter:
           weight: 700
    - family: Montserrat
      fonts:
-        - asset: assets/fonts/Montserrat-Black.ttf
-        - asset: assets/fonts/Montserrat-BlackItalic.ttf
-        - asset: assets/fonts/Montserrat-Bold.ttf
-        - asset: assets/fonts/Montserrat-BoldItalic.ttf
-        - asset: assets/fonts/Montserrat-ExtraBold.ttf
-        - asset: assets/fonts/Montserrat-ExtraBoldItalic.ttf
         - asset: assets/fonts/Montserrat-ExtraLight.ttf
         - asset: assets/fonts/Montserrat-ExtraLightItalic.ttf
         - asset: assets/fonts/Montserrat-Italic.ttf
