--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   flutter_html_view: ^0.5.11
   flutter_spinkit: ^4.1.2
   charts_flutter: 0.9.0
+  percent_indicator: ^2.1.1
+  flutter_linkify: 3.1.3
+  url_launcher: 5.4.10
+  imei_plugin: 1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -33,9 +37,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
-  image_path: "assets/icon.png"
-  ios: true
   android: true
+  image_path: "assets/icon.png"
 
 flutter:
   
