--- a/ProjetoPSFlutter/pubspec.yaml
+++ b/ProjetoPSFlutter/pubspec.yaml
@@ -42,7 +42,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
-  image_path: "assets/icon.png"
+  image_path: "assets/images/Icon.png"
   ios: true
   android: true
 
